2002-05-07  Roland McGrath  <roland@frob.com>

	* iouser-reauth.c (iohelp_reauth): u_int -> size_t

2002-05-04  Roland McGrath  <roland@frob.com>

	* iouser-create.c (iohelp_create_complex_iouser): Add const to args.
	* iohelp.h: Update decl.

	* iouser-restrict.c: New file.
	* Makefile (SRCS): Add it.
	* iohelp.h: Declare iohelp_restrict_iouser.

2001-04-21  Neal H Walfield  <neal@cs.uml.edu>

	* iohelp.h (iohelp_create_iouser): Change declaration
	such that as error_t is now returned and the iouser is
	a parameter.
	(iohelp_create_empty_iouser): New funtion.
	(iohelp_create_simple_iouser): New function.
	(iohelp_create_complex_iouser): New funtion.
	* iouser-create.c (iohelp_create_iouser): Implement new
	semantics.
	(iohelp_create_empty_iouser): Implement new function.
	(iohelp_create_simple_iouser): Implement new function.
	(iohelp_create_complex_iouser): Implement new function.
	* iouser-dup.c (iohelp_dup_iouser): Implement new semantics.
	* iouser-reauth.c (iohelp_reauth): Implement new semantics.

1999-07-11  Thomas Bushnell, BSG  <tb@mit.edu>

	* return-buffer.c: Include <sys/mman.h>.

	* iouser-reauth.c (iohelp_reauth): Cast first arg to munmap
	correctly.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* iouser-reauth.c: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* return-buffer.c (iohelp_return_malloced_buffer): Use mmap
	instead of vm_allocate.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* iouser-reauth.c (iohelp_reauth): Use munmap instead of
	vm_deallocate.

1998-08-21  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (SRCS): Add return-buffer.c.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* return-buffer.c (iohelp_return_malloced_buffer): Moved here from
	../libfshelp/return-buffer.c and renamed from fshelp to iohelp.
	* iohelp.h (iohelp_return_malloced_buffer): Declare it.

Mon Nov 18 16:37:59 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
