@@ -23,13 +23,16 @@
 void
 iohelp_handle_io_release_conch (struct conch *c, void *user)
 {
-  
+  struct shared_io *user_sh = c->holder_shared_page;
+
+  spin_lock (&user_sh->lock);
   if (c->holder_shared_page->conch_status != USER_HAS_NOT_CONCH)
     {
       c->holder_shared_page->conch_status = USER_HAS_NOT_CONCH;
       iohelp_fetch_shared_data (c->holder);
     }
-  
+  spin_unlock (&user_sh->lock);
+
   if (c->holder == user)
     {
       c->holder = 0;
